Fix "Header" section image overflow & background vertical cropping

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -103,17 +103,16 @@ h3 {
 /** BACKGROUND **/
 
 .bg-img::before {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-
+  content: "";
   background-image: url("../assets/images/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.1;
 
-  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .bg-plain-light {
@@ -128,13 +127,18 @@ h3 {
   background-color: var(--main-dark);
 }
 
-/** SECTION **/
+/** CONTAINER **/
 
-.section {
+.container {
   position: relative;
   width: 1110px;
   margin: 0 auto;
   padding: 100px 0;
+}
+
+header {
+  position: relative;
+  overflow-x: hidden;
 }
 
 /** IMAGES **/
@@ -181,15 +185,15 @@ h3 {
 /** BUTTONS **/
 
 .header-btn {
-  text-decoration: none;
-  background-color: var(--main);
-  color: var(--white);
-  font-weight: 700;
-  text-transform: uppercase;
   display: inline-flex;
-  padding: 12px 24px;
   justify-content: center;
   align-items: center;
+  text-decoration: none;
+  color: var(--white);
+  background-color: var(--main);
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 12px 24px;
 }
 
 .header-btn:hover {
@@ -216,15 +220,15 @@ h3 {
 }
 
 .nav-card-width {
-  max-width: 350px;
+  flex: 0 0 350px;
 }
 
 .nav-card-height-1-row {
-  max-height: 323px;
+  height: 323px;
 }
 
 .nav-card-height-2-row {
-  max-height: 348px;
+  height: 348px;
 }
 
 .nav-section {
@@ -240,7 +244,6 @@ h3 {
 
 .nav-card {
   background-color: var(--light);
-  padding: 24px;
   text-decoration: none;
 }
 
